@@ -2,7 +2,7 @@ Source: qgvtp
 Section: user/network
 Priority: extra
 Maintainer: Yuvraaj <yuvraaj@gmail.com>
-Build-Depends: debhelper (>= 5), libqt4-dev, libtelepathy-qt4-dev, libqtm-dev, qgvdial (>= 0.2.482)
+Build-Depends: debhelper (>= 5), libqt4-dev, libtelepathy-qt4-dev, libqtm-dev, qgvdial (>= 0.2.494)
 Standards-Version: 3.7.3
 Homepage: http://code.google.com/p/qgvdial/
 XSBC-Bugtracker: http://code.google.com/p/qgvdial/issues/list
