@@ -1,1 +1,3 @@
-  * Voicemail transcription from Google!
+  * Mosquitto fixes that apply even to Maemo
+  * Logs in QML
+  * qgvdial and qgvtp are now separate
